# mdbci

./: .gitignore  .reviewboardrc  .rspec  .rubocop.yml  .ruby-gemset  ARCHITECTURE.md  CONFIGURATION_FILES.md  Gemfile  PREAPARATION_FOR_MDBCI.md  PREPARATION_FOR_MDBCI.md  README.md  README.md.old  Rakefile  SLAVE_PREPARATION_FOR_RUN_TEST.md  SOME_FILE_TO_COMMIT  aws-config.yml  aws-config.yml.template  boxes  boxes.json  branches_list.txt  console.rb  generate.sh  generate_all.sh  generate_platform_version.sh  instance.json  instance.mdbci  instance_aws.json  instance_aws_box.json  libvirt_cnf_test.rb  maxscale-ci.sh  maxscale.sh  mdbci  mdbci.rb  mdbci_article.doc  no_sync_test.rb  products.json
BOXES/: boxes_aws.json  boxes_docker.json  boxes_libvirt.json  boxes_vbox.json  boxes_vm.json
cnf/: galera_node.cnf  mariadb_master.cnf  mariadb_master_my.cnf  mariadb_slave.cnf  mariadb_slave_my.cnf
community/: centos.json.template  centos.version  debian.json.template  debian.version  opensuse.version  rhel.json.template  sles.json.template  ubuntu.json.template
community_archive_noyum/: centos.json.template
community_archive_yum/: centos.json.template  sles.json.template
community_old/: centos.json.template  rhel.json.template
config/: generate_repository_config.yaml  products.yaml
confs/: aws.json  aws_lite.json  (+32 more)
confs.old/: centos6_5.5.json  docker_test.json  mdbci_box.json  mdbci_up_aws_test_config.json  mdbci_up_vbox_test_config.json  qemu-test-03.11.json  simple.json  test_docker_conf.json  test_docker_lite.json
package/runner/: AppRun.c  CMakeLists.txt
(+5594 files in other folders)
